Add quality param

--- a/popup.html
+++ b/popup.html
@@ -102,6 +102,15 @@
     <label for="model">Model:</label>
     <input type="text" id="model" placeholder="gpt-image-1">
   </div>
+ 
+  <div class="section">
+    <label for="quality">Quality:</label>
+    <select id="quality">
+      <option value="low">Low</option>
+      <option value="medium" selected>Medium</option>
+      <option value="high">High</option>
+    </select>
+  </div>
   
   <div class="section">
     <label for="prompt">Processing Prompt:</label>
