--- a/popup.html
+++ b/popup.html
@@ -95,7 +95,6 @@
   <div class="section">
     <label for="apiKey">OpenAI API Key:</label>
     <input type="password" id="apiKey" placeholder="Enter your OpenAI API key">
-    <div class="info">Your API key is stored locally and never shared</div>
   </div>
     
   <div class="section">
@@ -109,6 +108,15 @@
       <option value="low">Low</option>
       <option value="medium" selected>Medium</option>
       <option value="high">High</option>
+    </select>
+  </div>
+
+  <div class="section">
+    <label for="size">Output size:</label>
+    <select id="size">
+      <option value="1024x1024">1024 x 1024</option>
+      <option value="1536x1024" selected>1536 x 1024</option>
+      <option value="1024x1536">1024 x 1536</option>
     </select>
   </div>
   
