Add "Reset TO Defaults" button

--- a/popup.html
+++ b/popup.html
@@ -130,6 +130,10 @@
   </div>
   
   <div class="section">
+    <button id="resetSettings">Reset To Defaults</button>
+  </div>
+  
+  <div class="section">
     <label>Author</label>
     <div class="info">Ivan Seredkin — <a href="mailto:ivan.seredkin@verkada.com">ivan.seredkin@verkada.com</a></div>
   </div>
