Hide model settings and prompt from user

--- a/popup.html
+++ b/popup.html
@@ -104,24 +104,16 @@
 
   <div class="section">
     <label for="model">Model:</label>
-    <!-- TODO: add ability to change model -->
-    <select id="model">
-    </select>
+    <select id="model"></select>
   </div>
   
   <div class="section">
-    <label for="apiKey">OpenAI API Key:</label>
-    <input type="password" id="apiKey" placeholder="Enter your OpenAI API key">
+    <label for="apiKey">API Key:</label>
+    <input type="password" id="apiKey" placeholder="Enter your API key">
   </div>
- 
-  <div id="modelSettingsContainer"></div>
-  
+
   <div class="section">
     <button id="saveSettings" class="primary">Save settings</button>
-  </div>
-  
-  <div class="section">
-    <button id="resetSettings" class="secondary">Reset to defaults</button>
   </div>
   
   <div class="section">
