Add food preference settings (Vegetarian, Vegan, Keto, etc.)

--- a/popup.html
+++ b/popup.html
@@ -31,7 +31,7 @@
       color: #555;
     }
     
-    input, textarea {
+    input, textarea, select {
       width: 100%;
       box-sizing: border-box;
       padding: 8px;
@@ -110,6 +110,11 @@
   <div class="section">
     <label for="apiKey">API Key:</label>
     <input type="password" id="apiKey" placeholder="Enter your API key">
+  </div>
+
+  <div class="section">
+    <label for="foodPreference">Food Preference:</label>
+    <select id="foodPreference"></select>
   </div>
 
   <div class="section">
