Add 'View Verkada Menu' button in popup

--- a/popup.html
+++ b/popup.html
@@ -120,7 +120,11 @@
   <div class="section">
     <button id="saveSettings" class="primary">Save settings</button>
   </div>
-  
+
+  <div class="section">
+    <button id="menuLink" class="secondary">View Verkada Menu</button>
+  </div>
+
   <div class="section">
     <div class="info">Built with 🥑 by <a href="mailto:ivan.seredkin@verkada.com">Ivan Seredkin</a></div>
   </div>
