--- a/popup.html
+++ b/popup.html
@@ -162,6 +162,6 @@
   
   <div id="status" class="status"></div>
   
-  <script src="popup.js"></script>
+  <script type="module" src="popup.js"></script>
 </body>
 </html>
